test/service.yaml
apiVersion: v1
kind: Service
metadata:
    annotations: {}
    labels:
        app: test-tcp-app
        app-id: 5a07ec8e-053a-44ba-bc70-2b307e4dba03
        cluster-agent-id: f348cfd6-185b-4415-9eca-6af4482b438d
        cluster-agent-name: minikube-agent
        environment-id: f46188d5-b25b-4060-a27d-9e86ef134a63
        environment-name: DEV
        metadata-1: c2F1bG8udGVyY2Vpcm9AcmFuZG9saS5jYQ
        organization-id: 798f5046-8a97-4bfa-87be-f26a570c3bb1
        product: app-director
    name: test-tcp-app-dev-service0
    namespace: test
spec:
    ports:
        - name: test-tcp-app-dev-service0-1
          port: 8080
          protocol: TCP
          targetPort: 8080
    selector:
        app-id: 5a07ec8e-053a-44ba-bc70-2b307e4dba03
        cluster-agent-id: f348cfd6-185b-4415-9eca-6af4482b438d
        environment-id: f46188d5-b25b-4060-a27d-9e86ef134a63
    sessionAffinity: None
    type: ClusterIP
status:
    loadBalancer: {}
